# svo_relocalization

./: Doxyfile  README.md  index.html  package.xml
doxygen/html/: 3pt__relpos__finder_8h_source.html  5pt__relpos__finder_8h_source.html  abstract__place__finder_8h_source.html  abstract__relocalizer_8h_source.html  abstract__relpos__finder_8h_source.html  annotated.html  cc__place__finder_8h_source.html  classes.html  classreloc_1_1_abstract_place_finder-members.html  classreloc_1_1_abstract_place_finder.html  classreloc_1_1_abstract_place_finder__inherit__graph.map  classreloc_1_1_abstract_place_finder__inherit__graph.md5  classreloc_1_1_abstract_relocalizer-members.html  classreloc_1_1_abstract_relocalizer.html  classreloc_1_1_abstract_relocalizer__inherit__graph.map  classreloc_1_1_abstract_relocalizer__inherit__graph.md5  classreloc_1_1_abstract_relpos_finder-members.html  classreloc_1_1_abstract_relpos_finder.html  classreloc_1_1_abstract_relpos_finder__inherit__graph.map  classreloc_1_1_abstract_relpos_finder__inherit__graph.md5  classreloc_1_1_c_c_place_finder-members.html  classreloc_1_1_c_c_place_finder.html  classreloc_1_1_c_c_place_finder__inherit__graph.map  classreloc_1_1_c_c_place_finder__inherit__graph.md5  classreloc_1_1_e_s_m_relpos_finder-members.html  classreloc_1_1_e_s_m_relpos_finder.html  classreloc_1_1_e_s_m_relpos_finder__coll__graph.map  classreloc_1_1_e_s_m_relpos_finder__coll__graph.md5  classreloc_1_1_e_s_m_relpos_finder__inherit__graph.map  classreloc_1_1_e_s_m_relpos_finder__inherit__graph.md5  classreloc_1_1_empty_relpos_finder-members.html  classreloc_1_1_empty_relpos_finder.html  classreloc_1_1_empty_relpos_finder__coll__graph.map  classreloc_1_1_empty_relpos_finder__inherit__graph.md5  classreloc_1_1_feature_detector-members.html  classreloc_1_1_feature_detector.html  classreloc_1_1_fern-members.html  classreloc_1_1_fern.html  classreloc_1_1_fern_classifier-members.html  classreloc_1_1_fern_classifier.html  (+111 more)
doxygen/html/search/: all_63.js  all_65.js  all_66.js  all_6e.js  all_73.js  all_76.js  all_77.js  classes_61.js  classes_63.js  classes_66.js  classes_6d.js  classes_6f.js  classes_74.js  functions_63.js  functions_66.js  functions_72.js  search.js  variables_70.js
nano_slam_relocalization/: CMakeLists.txt
nano_slam_relocalization/matlab/: bag_test.m  myLucasKanade.m
svo_relocalization/: .ycm_extra_conf.py  CMakeLists.txt  package.xml
svo_relocalization/include/svo_relocalization/: 3pt_relpos_finder.h  5pt_relpos_finder.h  CC_place_finder.h  ESM_relpos_finder.h  abstract_place_finder.h  abstract_relocalizer.h  abstract_relpos_finder.h  cc_place_finder.h  empty_relpos_finder.h  esm_relpos_finder.h  feature_detector.h  fern.h  fern_classifier.h  ferns_relocalizer.h  frame.h  img_aling_se2.h  klein_murray_relocalizter.h  multiple_relocalizer.h  naive_place_finder.h  se2_align_se3.h  svo_reloc_utils.h  virtual_relocalizer.h  yaml_parse.h
svo_relocalization/matlab/: RotationCostFunction.m  bag_test.m  myEfficientSecondOrderMinimization.m  myLucasKanade.m  transformImageSE2.m
svo_relocalization/python/: T_plot.py  bag_extractor.py  dif_dist_plot.py  distance_matrix_extractor.py  plot_results.py  plots.py  test_launcher.py
svo_relocalization/src/: 3pt_relpos_finder.cpp  5pt_relpos_finder.cpp  CC_place_finder.cpp  ESM_relpos_finder.cpp  cc_place_finder.cpp  esm_relpos_finder.cpp  esp_relpos_finder.cpp  feature_detector.cpp  fern.cpp  fern_classifier.cpp  ferns_relocalizer.cpp  img_align_se2.cpp  klein_murray_relocalizer.cpp  multiple_relocalizer.cpp  naive_place_finder.cpp  se2_align_se3.cpp  se2_to_se3.cpp  svo_reloc_utils.cpp  svo_relocalizer_node.cpp  svo_relocalizer_node_ferns.cpp  test_confusion_matrix.cpp  test_main.cpp  test_relocalization.cpp  yaml_parse.cpp
svo_relocalization/src/test/: test_aligment.cpp  test_aligment2.cpp  test_confusion_matrix.cpp  test_feature_detector.cpp  test_ferns.cpp  test_relocalization.cpp
svo_slam_relocalization/matlab/: bag_test.m  myLucasKanade.m
