<?xml version="1.0"?>
<package>
  <name>svo_relocalization</name>
  <version>0.0.1</version>
  <description>The svo_relocalization package</description>

  <maintainer email="focs@opmbx.com">Quim Sanchez</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/focs/svo_relocalization</url>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vikit</build_depend>
  <build_depend>vikit_common</build_depend>
  <build_depend>vikit_ros</build_depend>
  <build_depend>svo</build_depend>
  <build_depend>svo_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>vikit</run_depend>
</package>
